--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <p> Paragrafo</p>
@@ -16,11 +17,19 @@
     <a href="https://www.youtube.com/">link</a>
 
     <h1>Videos</h1>
+    <header>
+<h1>Catalogo de videos </h1>
+<nav>
+    <a href="#">HOME</a>
+    <a href="#">SOBRE NOS </a>
+</nav>
+
+    </header>
 <h2>Everything Ends</h2>
     <iframe width="560" height="315" src="https://www.youtube.com/embed/d9hMo5Pd6b0?si=kbvCX_3lKdg6w7Y0" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
     <h2>beach weather - sex, drugs, etc. (legendado)</h2>
 <iframe width="560" height="315" src="https://www.youtube.com/embed/hkP9iEDwU_g?si=GcEQNI4oRD41IUSW" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
-<h2>   TITULO</h2>
+<h2>   Ylang Ylang (slowed + reverb) - FKJ</h2>
 
 <iframe width="560" height="315" src="https://www.youtube.com/embed/l1WlHRukTUg?si=UdMISj-BhJlmTXNG" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
 </body>
