--- a/index.html
+++ b/index.html
@@ -15,8 +15,7 @@
     <b> Negrito </b>
     <strong> Negrito </strong>
     <a href="https://www.youtube.com/">link</a>
-
-    <h1>Videos</h1>
+ <h1>Videos</h1>
     <header>
 <h1>Catalogo de videos </h1>
 <nav>
@@ -25,12 +24,18 @@
 </nav>
 
     </header>
-</body>
-</html>
+<main>
 <h2>Everything Ends</h2>
     <iframe width="560" height="315" src="https://www.youtube.com/embed/d9hMo5Pd6b0?si=kbvCX_3lKdg6w7Y0" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
-    <h2>beach weather - sex, drugs, etc. (legendado)</h2>
-<iframe width="560" height="315" src="https://www.youtube.com/embed/hkP9iEDwU_g?si=GcEQNI4oRD41IUSW" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
-<h2>   Ylang Ylang (slowed + reverb) - FKJ</h2>
+    <h2>David Garrett - Paganini Caprice Nº 24 [concert].</h2>
+    <iframe width="560" height="315" src="https://www.youtube.com/embed/ITzcZia7fsQ?si=nH_BIUHfA282kgeF" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+    <h2>   Ylang Ylang (slowed + reverb) - FKJ</h2>
 <iframe width="560" height="315" src="https://www.youtube.com/embed/l1WlHRukTUg?si=UdMISj-BhJlmTXNG" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+</main>
+<footer>
+    Produzido por GabrielF. e Evelyn
+</footer>
+</body>
+</html>
 
+   
