--- a/index.html
+++ b/index.html
@@ -16,14 +16,13 @@
     <strong> Negrito </strong>
     <a href="https://www.youtube.com/">link</a>
  <h1>Videos</h1>
-    <header>
-<h1>Catalogo de videos </h1>
-<nav>
-    <a href="#">HOME</a>
-    <a href="#">SOBRE NOS </a>
-</nav>
-
-    </header>
+ <header class="cabecalho">
+    <h1 class="primeiro-titulo">Catálogo de filmes</h1>  
+    <nav>
+        <a href="#"> Home </a>   
+        <a href="#">Sobre Nós</a> 
+    </nav>
+</header>
 <main>
 <h2>Everything Ends</h2>
     <iframe width="560" height="315" src="https://www.youtube.com/embed/d9hMo5Pd6b0?si=kbvCX_3lKdg6w7Y0" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
